test/pos/ebind-03.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $kb ((lq_karg$v##kb Int)))
(wf $ka ((lq_karg$v##ka Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(x1 Int)) (=> (= _VV##1 1) (= _VV##1 x1))))
(constraint (forall ((_VV##2 Int)(x1 Int)) (=> (= _VV##2 (+ x1 1)) ($ka _VV##2))))
(constraint (forall ((_VV##3 Int)(x2 Int)) (=> ($ka _VV##3) (= _VV##3 x2))))
(constraint (forall ((_VV##4 Int)(x2 Int)) (=> (= _VV##4 (+ x2 1)) ($kb _VV##4))))
(constraint (forall ((_VV##5 Int)) (=> ($kb _VV##5) (= _VV##5 3))))

