test/neg/ebind-02.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k ((lq_karg$m##k Int)(lq_karg$v##k Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(z Int)(m Int)) (=> (and (= z (- m 1)) (= _VV##1 (+ z 2))) ($k m _VV##1))))
(constraint (forall ((_VV##2 Int)(x1 Int)(m Int)) (=> ($k m _VV##2) (= _VV##2 x1))))
(constraint (forall ((_VV##3 Int)(x1 Int)(m Int)) (=> (= _VV##3 (+ x1 1)) (= _VV##3 (+ m 20)))))

